--- a/views/result-tournament.html
+++ b/views/result-tournament.html
@@ -6,6 +6,8 @@
     <title>Résultat & Arbre de tournoi</title>
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
